# enterprise-doc-bot

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: cli.py
src/chat/: README.md  llm_client.py
src/ingest/: README.md  confluence_ingest.py  github_ingest.py
src/search/: README.md  retriever.py  vector_store.py
src/shared/: README.md  config.py  logging_utils.py  text_processing.py
src/web/: __init__.py  app.py
